--- a/snakedenfitness/diet/templates/diet/pro_meal_log.html
+++ b/snakedenfitness/diet/templates/diet/pro_meal_log.html
@@ -25,24 +25,8 @@
       <a class="nav-link disabled" href="#">Disabled</a>
     </li>
   </ul> -->
-
-
-  {% comment %} <h1>Meal logs available: </h1>
-
-  <div class="container">
-      {% for meal in meals %}
-      <h3>{{ meal.user }} :</h3>
-        <h5>{{ meal.name }}</h5>
-        <h5>cal: {{ meal.calories }}</h5>
-        <h5>sugars: {{ meal.sugars }}</h5>
-        <h5>carbs: {{ meal.carbs }}</h5>
-        <h5>protein: {{ meal.protein }}</h5>
-
-        <p>__________________________________________________________ </p>
-      {% endfor %}
-  </div> {% endcomment %}
-
-  <h1>Meal logs available: </h1>
+<div class="container mt-4">
+  <h1 class="text-center py-2">Meal logs available:</h1>
     {% for meal in meals %}
       {% for CD in CDTable %}
         {% if meal.user == CD.client  %}
@@ -54,25 +38,11 @@
         <h5>sugars: {{ meal.sugars }}</h5>
         <h5>carbs: {{ meal.carbs }}</h5>
         <h5>protein: {{ meal.protein }}</h5>
-
-        <p>__________________________________________________________ </p>
+        <hr>
 
         {% endif %}
 
       {% endfor %}
     {% endfor %}
-  </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
+</div>
 {% endblock %}
