--- a/snakedenfitness/fitness/templates/fitness/trainer_home.html
+++ b/snakedenfitness/fitness/templates/fitness/trainer_home.html
@@ -1,63 +1,25 @@
 {% extends 'base.html' %}
 
 {% block body %}
+<div class="container py-2 my-3" style="max-width: 50%;">
+    <h1 class="text-center">Trainer Home</h1>
+    <div class="py-2 text-center h4">
+        My Clients
+    </div>
 
-<h1>Trainer Home</h1>
-<h2>Name: {{ user.get_full_name }}</h2>
-<h3>Username: {{ user.username }}</h3>
-
-<h1 style="text-align: center; margin-top: 50px">Clients</h1>
-
-<div class="container p-0" style="margin-left: 375px">
-    <div class="row pb-1" style="text-align: center">
-            <div class="col-md-6 text-center h4" >
-                My Clients
+    <div class="my-2">
+        {% for trainer in CTtable %}
+        <div class="row">
+            <div class="col-md-6 text-center">{{ trainer.client }}</div>
+            <div class="col-md-6 text-center">
+                <a class="btn btn-warning text-light" href="{% url 'delete_client_form' trainer.id %}">Remove Client</a>
             </div>
-            {% comment %} <div class="col-md-3 text-center h4">
-                Client Requests
-            </div> {% endcomment %}
+        </div>
+        <hr>
+        {% endfor %}
+        <div class="text-center py-2">
+            <a href="{% url 'trainer_workout_data' %}" class="btn btn-success">Workout logs</a>
+        </div>
     </div>
 </div>
-
-
-<div class="row pb-1">
-        <div class="col-md-6 text-center h6" style=" margin-top: 20px">
-            Joe Johnson
-            <button class="btn btn-warning" style="color: white; margin-left: 20px;" type="submit">View</button>
-        </div>
-
-        <div class="col-md-3 text-center h6" style=" margin-top: 20px">
-            John Joseph
-           {# <a href="{% url 'groups' %}">#}
-            <button class="btn btn-success" style="color: white; margin-left: 20px;" type="submit">Accept</button>
-            <button class="btn btn-danger" style="color: white; margin-left: 10px;" type="submit">Decline</button>
-            </a>
-        </div>
-</div>
-</div>
-</div>
-<div class="container p-0">
-    <h2>Name: {{ user.get_full_name }}</h2>
-    <h3>Username: {{ user.username }}</h3>
-
-    {% if user.is_authenticated %}
-        <p>you are authenticated</p>
-    {% endif %}
-    {% if user.profile.role == 2 %}
-        <p>you are a Trainer</p>
-    {% endif %}
-
-    <h4> Your clients:  </h4>
-        {% for trainer in CTtable %}
-            <div> {{ trainer.client }} </div>
-
-            <a class="btn btn-sm btn-warning" href="{% url 'delete_client_form' trainer.id %}">Remove Client</a>
-
-            <p></p>
-        {% endfor %}
-
-        <br>
-        <a href="{% url 'trainer_workout_data' %}" class="btn btn-success"> Workout logs </a>
-</div>
-
 {% endblock %}
