--- a/snakedenfitness/fitness/templates/fitness/edit_workout.html
+++ b/snakedenfitness/fitness/templates/fitness/edit_workout.html
@@ -1,14 +1,15 @@
 {% extends 'base.html' %}
 
 {% block body %}
- <div class="container p-0" style="margin-top: 25px; max-width: 25%;">
-        <h1 style="text-align: center">Edit Workout Information</h1>
-        <form method="POST" style="margin-top: 25px">
+ <div class="container py-2 my-3" style="max-width: 25%;">
+        <h1 class="text-center">Edit Workout Information</h1>
+        <form method="POST" class="mt-3">
             {% csrf_token %}
             {{ form.as_p }}
-
-            <input type="submit" class="btn btn-primary" style="margin-top: 15px; margin-left: 165px; text-align: center" value="Submit">
-            <a href="{% url 'fitness_home' %}" class="btn btn-danger" style="margin-top: 15px;">Cancel</a>
+            <div class="text-center">
+                <input type="submit" class="btn btn-primary" value="Submit">
+                <a href="{% url 'user_workout_data' %}" class="btn btn-danger">Cancel</a>
+            </div>
         </form>
     </div>
 {% endblock %}
