--- a/snakedenfitness/fitness/templates/fitness/pro_workout_log.html
+++ b/snakedenfitness/fitness/templates/fitness/pro_workout_log.html
@@ -1,28 +1,8 @@
 {% extends 'base.html' %}
 
 {% block body %}
-
-
-<h1>Workout logs available: </h1>
-
-<div class="container">
-    {% comment %} {% for workout in workouts %}
-        <h3>{{ workout.user }} :</h3>
-        <h5>{{ workout.name }}</h5>
-        <h5>reps: {{ workout.reps }}</h5>
-        <h5>sets: {{ workout.sets }}</h5>
-        <h5>weight: {{ workout.weight }}</h5>
-    {% endfor %}
-
-    <p>__________________________________________________________ </p>
-
-    {% for CT in CTtable %}
-        <h3>{{ CT }} :</h3>
-        <h5>client: {{ CT.client }}</h5>
-        <h5>trainer: {{ CT.trainer}}</h5>
-    {% endfor %} {% endcomment %}
-
-    {% comment %} <p>__________________________________________________________ </p> {% endcomment %}
+<div class="container mt-4">
+    <h1 class="text-center py-2">Workout logs available:</h1>
 
     {% for workout in workouts %}
         {% for CT in CTtable %}
@@ -42,7 +22,7 @@
                 <div>Sets: {{ workout.sets }}</div>
                 <div>Weight: {{ workout.weight }}</div>
 
-                <p>__________________________________________________________ </p>
+                <hr>
 
             {% endif %}
         {% endfor %}
