--- a/snakedenfitness/fitness/templates/fitness/workout_log.html
+++ b/snakedenfitness/fitness/templates/fitness/workout_log.html
@@ -1,13 +1,33 @@
 {% extends 'base.html' %}
 
 {% block body %}
-    <h1 class="contianer text-center mt-2">Workout log for {{ user.username }}</h1>
+
     <div class="container mt-4">
+        <h1 class="text-center py-2">Workout log for {{ user.username }}</h1>
+
+        <div class="row">
+            <div class="h6">
+                <a class="btn btn-success" href="{% url 'workout_form' %}">Record New Workout</a>
+
+                {% if CTtable%}
+                    <a class="btn btn-info text-light" href="{% url 'update_client_form' %}">Change Trainer</a>
+                    <h6 class="d-inline btn justify-content-end bg-light">
+                        {% for trainer in CTtable %}
+                            Your trainer is <b>{{ trainer.trainer }}</b>
+                        {% endfor %}
+                    </h6>
+                {% else %}
+                    <a class="btn btn-info text-light" href="{% url 'add_client_form' %}">Request Trainer</a>
+                {% endif %}
+            </div>
+        </div>
+
         <div class="row">
             <div class="col-md-12">
                 <table class="table table-striped text-center">
                     <thead class="bg-dark text-light">
                         <tr>
+                            <th scope="col">Actions</th>
                             <th scope="col">Exercise</th>
                             <th scope="col">Type</th>
                             <th scope="col">Muscle Group</th>
@@ -19,6 +39,10 @@
                     <tbody>
                         {% for workout in workouts %}
                             <tr>
+                                <td>
+                                    <a href="{% url 'edit_workout' workout.id %}" class="btn btn-warning text-light">Edit</a>
+                                    <a href="{% url 'delete_workout' workout.id %}" class="btn btn-danger">Delete</a>
+                                </td>
                                 <td>{{ workout.exercise_name }}</td>
                                 <td>{{ workout.workout_type }}</td>
                                 <td>{{ workout.muscle_group }}</td>
