--- a/snakedenfitness/community/templates/community/editGroup.html
+++ b/snakedenfitness/community/templates/community/editGroup.html
@@ -18,6 +18,7 @@
 <!--        <textarea class="" id="group_description" name="group_description"></textarea>-->
         <div class="text-center py-2">
             <button type="submit" class="btn btn-primary">Submit</button>
+            <a href="{% url 'rooms' %}" class="btn btn-danger">Cancel</a>
         </div>
     </form>
 </div>
