--- a/snakedenfitness/community/templates/community/rooms.html
+++ b/snakedenfitness/community/templates/community/rooms.html
@@ -1,10 +1,8 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<div class="container">
-    <div class="row h1 my-3">
-        <div class="text-center">Community</div>
-    </div>
+<div class="container py-2 my-3">
+    <h1 class="text-center">Community</h1>
     <div class="row py-2">
         <div class="col-2">
             <a href="{% url 'groupForm' %}" class="btn btn-success px-3">New Group</a>
