--- a/snakedenfitness/community/templates/community/displayGuides.html
+++ b/snakedenfitness/community/templates/community/displayGuides.html
@@ -1,16 +1,15 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block body %}
-    <h1 class="text-center mt-5">Display Guides</h1>
-    <div class="container p-0">
-        <CENTER>
-            <div class="jumbotron">
-                <p class="lead">View posted material here!</p>
-                <hr class="my-4">
-                <img src="{% static user_pr %}" class="image_responsive" height="800px" width="800px">
-                <p>
-                <p class="text-center mt-3"><a href="{% url 'rooms' %}">Return to home</a></p>
-            </div>
-        </CENTER>
+<div class="container py-2 my-3">
+    <h1 class="text-center">Display Guides</h1>
+    <div class="text-center">
+        <h4 class="lead">View posted material here!</h4>
+        <hr class="my-4">
+        <img src="{% static user_pr %}" class="image_responsive" max-width="100%">
+        <div class="text-center py-2">
+            <a href="{% url 'rooms' %}" class="btn btn-danger">Go Back</a>
+        </div>
     </div>
+</div>
 {% endblock %}
