--- a/snakedenfitness/community/templates/community/groupForm.html
+++ b/snakedenfitness/community/templates/community/groupForm.html
@@ -1,8 +1,9 @@
 {% extends 'base.html' %}
 
 {% block body %}
-<div class="container">
-    <form method="POST">
+<div class="container py-2 my-3" style="max-width:25%;">
+    <h1 class="text-center">Create Group</h1>
+    <form class="mt-3" method="POST">
         {% csrf_token %}
 
         <!-- <div class="mb-3 mt-3">
@@ -10,17 +11,17 @@
             <input type="text" class="" id="group_name" name="group_name">
         </div> -->
 
-        <div class="mb-3 row pt-3">
-            <label for="group-name" class="col-sm-2 col-form-label">Group Name:</label>
-            <div class="col-sm-8">
-                <input type="text" name="group_name" id="group_name">
-            </div>
+        <div class="row">
+            <label for="group_name" class="form-label">Group Name</label>
+            <input class="form-control" type="text" name="group_name" id="group_name">
         </div>
 
 <!--        <label for="group_description" class="pt-1">Group Description:</label>-->
 <!--        <textarea class="" id="group_description" name="group_description"></textarea>-->
-
-        <button type="submit" class="btn btn-primary mb-3">Submit</button>
+        <div class="text-center py-2">
+            <button type="submit" class="btn btn-primary">Submit</button>
+            <a href="{% url 'rooms' %}" class="btn btn-danger">Cancel</a>
+        </div>
     </form>
 </div>
 {% endblock %}
