--- a/snakedenfitness/community/templates/community/guides.html
+++ b/snakedenfitness/community/templates/community/guides.html
@@ -1,20 +1,20 @@
 {% extends 'base.html' %}
 
 {% block body %}
-    <h1 class="text-center mt-5">Guides</h1>
-    <div class="container p-0">
-        <h5 class="text-center mt-2 mb-4">Post your workout guides, recipes, motivational quotes, etc here!</h5>
-
-                <form class="text-center mt-2" method="POST" enctype="multipart/form-data">
-                    {% csrf_token %}
-                    <table class="text-center mt-2" style="margin-left: 500px;">
-                       {{ form.as_table }}
-                    </table>
-                    <input type="submit" class="btn btn-primary" style="margin-top: 20px">
-                </form>
-          <p class="text-center mt-3"><a href="{% url 'rooms' %}">Return to home</a></p>
-
+<div class="container py-2 my-3">
+    <h1 class="text-center">Guides</h1>
+    <h5 class="text-center lead">Post your workout guides, recipes, motivational quotes, etc here!</h5>
+    <div class="text-center">
+        <form method="POST" enctype="multipart/form-data">
+            {% csrf_token %}
+            {{ form.as_table }}
+            <div class="d-flex justify-content-center py-2 my-2">
+                <div class="px-1"><button type="submit" class="btn btn-primary">Submit</button></div>
+                <div class="px-1"><a href="{% url 'rooms' %}" class="btn btn-danger">Go Back</a></div>
+            </div>
+        </form>
     </div>
+</div>
 {% endblock %}
 
 
