--- a/snakedenfitness/community/templates/community/room.html
+++ b/snakedenfitness/community/templates/community/room.html
@@ -23,6 +23,9 @@
         </div>
         <button class="btn btn-primary col-md-3" id="chat-message-submit">Submit</button>
     </form>
+    <div class="text-center py-2">
+        <a href="{% url 'rooms' %}" class="btn btn-danger">Go Back</a>
+    </div>
 </div>
 {% endblock %}
 
