--- a/snakedenfitness/users/templates/users/login.html
+++ b/snakedenfitness/users/templates/users/login.html
@@ -1,18 +1,18 @@
 {% extends 'base.html' %}
 {% block body %}
     {% load crispy_forms_tags %}
-    <div class="container py-5" style="max-width: 25%">
+    <div class="container py-2 mt-3" style="max-width: 25%">
         <div class="container py-5">
-            <h1 style="text-align: center;">Login</h1>
+            <h1 class="text-center">Login</h1>
             <form method="POST">
                 {% csrf_token %}
                 {{ form|crispy }}
-                <button class="btn btn-primary" style="margin-left: 185px; margin-top: 15px" type="submit">Login
-                </button>
+                <div class="text-center py-3">
+                    <button class="btn btn-primary" type="submit">Login</button>
+                </div>
             </form>
-            <div class="d-flex align-items-center justify-content-center pb-4" style="margin-top: 15px">
-                <p class="mb-0 me-2">Don't have an account?</p>
-                <a href="{% url 'register' %}"> Sign Up Here</a>
+            <div class="text-center">
+                <span>Don't have an account?<a href="{% url 'register' %}"> Sign Up Here</a></span>
             </div>
         </div>
     </div>
