--- a/snakedenfitness/users/templates/users/register.html
+++ b/snakedenfitness/users/templates/users/register.html
@@ -2,18 +2,18 @@
 
 {% block body %}
     {% load crispy_forms_tags %}
-    <div class="container py-5" style="max-width: 50%;">
-        <h1 style="text-align: center;">Register</h1>
+    <div class="container py-2 mt-3" style="max-width: 50%;">
+        <h1 class="text-center">Register</h1>
         <form enctype="multipart/form-data" method="POST">
             {% csrf_token %}
             {{ user_form|crispy }}
             {{ profile_form|crispy }}
-
-            <button type="submit" class="btn btn-primary" style="margin-top: 15px; margin-left: 175px">Register</button>
+            <div class="text-center py-2">
+                <button type="submit" class="btn btn-primary">Register</button>
+            </div>
         </form>
-        <div class="d-flex align-items-center justify-content-center pb-4" style="margin-top: 15px">
-            <p class="mb-0 me-2">Already have an account?</p>
-            <a href="{% url 'login' %}"> Login Here</a>
+        <div class="text-center">
+            <span>Already have an account?<a href="{% url 'login' %}"> Login Here</a></span>
         </div>
     </div>
 {% endblock %}
